fhir/6.0.0/terminology.md
# Terminology - eHealth Infrastructure v6.0.0

* [**Table of Contents**](toc.md)
* **Terminology**

## Terminology

## ValueSets

* [Action guidance For Types](ValueSet-ehealth-action-guidance-for-types.md)
* [Action guidance types](ValueSet-ehealth-action-guidance-types.md)
* [Action](ValueSet-ehealth-action.md)
* [Activity Definition Code](ValueSet-ehealth-activitydefinition-code.md)
* [Administrative Status](ValueSet-administrative-status.md)
* [Appointment Reason](ValueSet-ehealth-appointment-reason.md)
* [Appointment Service Type](ValueSet-ehealth-appointment-servicetype.md)
* [Appointment Type Codes](ValueSet-appointmenttype-codes.md)
* [Basic resource type](ValueSet-ehealth-basic-resource-type.md)
* [Body site](ValueSet-ehealth-body-site.md)
* [Careplan Category](ValueSet-ehealth-careplan-category.md)
* [CareTeam Category](ValueSet-ehealth-careteam-category.md)
* [CareTeam Participant Role](ValueSet-ehealth-careteam-participant-role.md)
* [Clinical Impression Codes](ValueSet-ehealth-clinicalimpression-codes.md)
* [ClinicalImpression Decision Codes](ValueSet-ehealth-clinicalimpression-decision-codes.md)
* [ClinicalImpression Finding Codes](ValueSet-ehealth-clinicalimpression-finding-codes.md)
* [ClinicalImpression Investigation Item Codes](ValueSet-ehealth-clinicalimpression-investigation-item-codes.md)
* [Communication Category](ValueSet-ehealth-communication-category.md)
* [Tilstandskoder](ValueSet-ehealth-condition-conditions.md)
* [Conditions](ValueSet-ehealth-conditions.md)
* [Consent Category](ValueSet-ehealth-consent-category.md)
* [ContactPoint Custodian](ValueSet-ehealth-contactpoint-custodian.md)
* [ContactPoint System](ValueSet-ehealth-contactpoint-system.md)
* [Data Absent Reason](ValueSet-ehealth-data-absent-reason.md)
* [eHealth Designation Use](ValueSet-ehealth-designation-use.md)
* [Device Calibration Actor](ValueSet-ehealth-device-calibration-actor.md)
* [Device Calibration Period](ValueSet-ehealth-device-calibration-period.md)
* [Device Calibration Type](ValueSet-ehealth-device-calibration-type.md)
* [Device Measurement Unit](ValueSet-ehealth-device-measurement-unit.md)
* [Device Measuring Quality](ValueSet-ehealth-device-measuring-quality.md)
* [Device Safety](ValueSet-ehealth-device-safety.md)
* [SSL Service Types](ValueSet-ehealth-device-service-types.md)
* [Device Supplier Roles](ValueSet-ehealth-device-supplier-roles.md)
* [Device Types](ValueSet-ehealth-device-types.md)
* [Device Use Reason](ValueSet-ehealth-device-use-reason.md)
* [DeviceMetricPropertyTypes](ValueSet-ehealth-devicemetric-property-types.md)
* [DeviceMetric Quality Types](ValueSet-ehealth-devicemetric-quality-types.md)
* [Document Category](ValueSet-ehealth-document-category.md)
* [Document Class](ValueSet-ehealth-document-class.md)
* [EHealthDocumentReference Type](ValueSet-ehealth-document-reference-type.md)
* [Document Sharing State](ValueSet-document-sharing-state.md)
* [Document Type](ValueSet-ehealth-document-type.md)
* [Policies for provenances](ValueSet-ehealth-provenance-policies.md)
* [UCUM printSymbol supplement](ValueSet-ehealth-ucum-printsymbol-supplement.md)
* [eHealth Usage Context Type](ValueSet-ehealth-usage-context-type.md)
* [Event Type Codes](ValueSet-ehealth-event-type-codes.md)
* [Facility Type Codes](ValueSet-ehealth-facility-type-codes.md)
* [FormatCodes](ValueSet-ehealth-format-codes.md)
* [FS III, helbredstilstande](ValueSet-fs3-health.md)
* [Goal Description](ValueSet-ehealth-goal-description.md)
* [Goal Target Measure](ValueSet-goal-target-measure.md)
* [Sygdoms- og diagnosekoder](ValueSet-ehealth-health-conditions.md)
* [IT Competence Level codes](ValueSet-competence-percentage-codes.md)
* [Jurisdiction](ValueSet-ehealth-jurisdiction.md)
* [Library Type](ValueSet-ehealth-library-type.md)
* [Material Assignment Participant Function](ValueSet-material-assignment-participant-function.md)
* [MaterialCommunicationCategory](ValueSet-material-communication-category.md)
* [Material Registration Participant Function](ValueSet-material-registration-participant-function.md)
* [Measurement Sharing Policies](ValueSet-ehealth-measurement-sharing-policies.md)
* [Media Codes](ValueSet-ehealth-media-codes.md)
* [Media modality](ValueSet-ehealth-media-modality.md)
* [Media view](ValueSet-ehealth-media-view.md)
* [MessageCategory](ValueSet-message-category.md)
* [MessageMedium](ValueSet-message-medium.md)
* [eHealth Message Reason Code](ValueSet-ehealth-message-reasonCode.md)
* [Modifier Role](ValueSet-ehealth-modifier-role.md)
* [Observation Codes](ValueSet-ehealth-observation-codes.md)
* [Observation Method](ValueSet-ehealth-observation-method.md)
* [OIO BPP Roles](ValueSet-ehealth-oio-bpp-roles.md)
* [OIO Organization Type](ValueSet-ehealth-oio-organization-type.md)
* [Organization Relation Type](ValueSet-ehealth-organization-relation-type.md)
* [Organization Source](ValueSet-ehealth-organization-source.md)
* [Organization Specialty](ValueSet-ehealth-organization-specialty.md)
* [Organization Synchronization Status](ValueSet-ehealth-organization-synchronization-status.md)
* [Organization Type](ValueSet-ehealth-organization-type.md)
* [Overview Usage Mode](ValueSet-ehealth-overviewUsageMode.md)
* [Participant Function](ValueSet-participant-function.md)
* [PlanDefinition Recommendation](ValueSet-ehealth-plandefinition-recommendation.md)
* [Practice Setting Codes](ValueSet-ehealth-practice-setting-codes.md)
* [Priority](ValueSet-ehealth-priority.md)
* [eHealth Program](ValueSet-ehealth-program.md)
* [eHealth Property](ValueSet-ehealth-property.md)
* [Quality Types](ValueSet-ehealth-quality-types.md)
* [Questionnaire Elements](ValueSet-ehealth-questionnaire-elements.md)
* [Questionnaire Item Control](ValueSet-ehealth-questionnaire-item-control.md)
* [Questionnaire Item Image Format](ValueSet-ehealth-questionnaire-item-image-format.md)
* [Questionnaire Item Significance Indicator](ValueSet-ehealth-questionnaire-significance-indicator.md)
* [QuestionnaireRecommendation](ValueSet-ehealth-questionnaire-recommendation.md)
* [Questionnaire Types](ValueSet-ehealth-questionnaire-types.md)
* [Reference Range Type](ValueSet-ehealth-reference-range-type.md)
* [RegionalSubdivisionCodes](ValueSet-regional-subdivision-codes.md)
* [RelationshipTypes](ValueSet-relatedperson-relationshiptype.md)
* [Resolved Timing Type](ValueSet-resolved-timing-type.md)
* [Restriction Category](ValueSet-ehealth-restriction-category.md)
* [Sharing Approval Policies](ValueSet-ehealth-measurement-sharing-approval-policies.md)
* [Situation Quality](ValueSet-ehealth-situation-quality.md)
* [SorOrganizationSpecialty](ValueSet-sor-organization-specialty.md)
* [SorOrganizationType](ValueSet-ehealth-sor-organization-type.md)
* [Task Category](ValueSet-ehealth-task-category.md)
* [Thumbnail Size Category](ValueSet-ehealth-thumbnail-size-category.md)
* [Thumbnail Status](ValueSet-ehealth-thumbnail-status.md)
* [Topic Type](ValueSet-ehealth-topic-type.md)
* [Trigger Behavior](ValueSet-ehealth-trigger-behavior.md)
* [Trigger Enablement Code](ValueSet-ehealth-trigger-enablement-code.md)
* [eHealthUnitCodes](ValueSet-ehealth-unit-code.md)
* [eHealthUnit](ValueSet-ehealth-unit.md)
* [Usage Quality](ValueSet-ehealth-usage-quality.md)
* [View For Type](ValueSet-ehealth-view-for-type.md)
* [View Type](ValueSet-ehealth-view-type.md)
* [KLTilstandeKoderSygepleje](ValueSet-kl.dk-fhir-common-caresocial-ValueSet-KLConditionCodesNursing.md)
* [MedCom PHMR Observation ValueSet](ValueSet-phmr-observation-vs.md)
* [DK_IHE_ClassCode_VS](ValueSet-dk-ihe-classcode-vs.md)
* [DK_IHE_EventCodeLists_VS](ValueSet-dk-ihe-eventcodelists-vs.md)
* [DK_IHE_FormatCode_VS](ValueSet-dk-ihe-formatcode-vs.md)
* [DK_IHE_HealthcareFacilityTypeCode_VS](ValueSet-dk-ihe-healthcarefacilitytypecode-vs.md)
* [DK_IHE_practiceSettingCode_VS](ValueSet-dk-ihe-practicesettingcode-vs.md)
* [DK_IHE_TypeCode_VS](ValueSet-dk-ihe-typecode-vs.md)
* [Audit Restriction Levels](ValueSet-ehealth-audit-restriction-levels.md)
* [Media Usage Mode](ValueSet-ehealth-media-usage-mode.md)

## CodeSystems

* [Event Timing](CodeSystem-EventTiming.md)
* [Action Participant Function](CodeSystem-action-participant-function.md)
* [Audit Restriction Levels](CodeSystem-ehealth-audit-restriction-levels.md)
* [Care Plan Status](CodeSystem-care-plan-status.md)
* [Action guidance types](CodeSystem-ehealth-action-guidance-types.md)
* [Action Type](CodeSystem-ehealth-action-type.md)
* [Action](CodeSystem-ehealth-action.md)
* [Activity Definition Codes](CodeSystem-ehealth-activitydefinition-code.md)
* [Administrative Status](CodeSystem-ehealth-administrative-status.md)
* [Appointment Reason](CodeSystem-ehealth-appointment-reason.md)
* [Appointment Service Types](CodeSystem-ehealth-appointment-servicetype.md)
* [Appointment Type Codes](CodeSystem-ehealth-appointmenttype-codes.md)
* [Basic resource type](CodeSystem-ehealth-basic-resource-type.md)
* [CarePlan Category](CodeSystem-ehealth-careplan-category.md)
* [CareTeam Category](CodeSystem-ehealth-careteam-category.md)
* [CareTeam Participant Role](CodeSystem-ehealth-careteam-participant-role.md)
* [ClinicalImpression Codes](CodeSystem-ehealth-clinicalimpression-codes.md)
* [ClinicalImpression Decision Codes](CodeSystem-ehealth-clinicalimpression-decision-codes.md)
* [ClinicalImpression Decision Support Codes](CodeSystem-ehealth-clinicalimpression-decision-support-codes.md)
* [ClinicalImpression Finding Codes](CodeSystem-ehealth-clinicalimpression-finding-codes.md)
* [ClinicalImpression Investigation Item Codes](CodeSystem-ehealth-clinicalimpression-investigation-item-codes.md)
* [Clone Operation](CodeSystem-ehealth-clone-operation.md)
* [Communication Category](CodeSystem-ehealth-communication-category.md)
* [Conditions](CodeSystem-ehealth-conditions.md)
* [Consent Category](CodeSystem-ehealth-consent-category.md)
* [ContactPoint Custodian](CodeSystem-ehealth-contactpoint-custodian.md)
* [ContactPoint System](CodeSystem-ehealth-contactpoint-system.md)
* [eHealth Designation Use](CodeSystem-ehealth-designation-use.md)
* [Device calibration actor](CodeSystem-ehealth-device-calibration-actor.md)
* [Device calibration period](CodeSystem-ehealth-device-calibration-period.md)
* [Device Measuring Quality](CodeSystem-ehealth-device-measuring-quality.md)
* [Device safety](CodeSystem-ehealth-device-safety.md)
* [Device service types](CodeSystem-ehealth-device-service-types.md)
* [Device Supplier Roles](CodeSystem-ehealth-device-supplier-roles.md)
* [Device Types](CodeSystem-ehealth-device-types.md)
* [Device Use Reason](CodeSystem-ehealth-device-use-reason.md)
* [DeviceMetric Property Types](CodeSystem-ehealth-devicemetric-property-types.md)
* [DeviceMetric Quality Types](CodeSystem-ehealth-devicemetric-quality-types.md)
* [Document Class](CodeSystem-ehealth-document-class.md)
* [EHealthDocumentReference Type](CodeSystem-ehealth-document-reference-type.md)
* [Document Sharing State](CodeSystem-document-sharing-state.md)
* [Document Type](CodeSystem-ehealth-document-type.md)
* [Policies for provenances](CodeSystem-ehealth-provenance-policies.md)
* [UCUM printSymbol supplement](CodeSystem-ehealth-ucum-printsymbol-supplement.md)
* [eHealth Usage Contxt Type](CodeSystem-ehealth-usage-context-type.md)
* [FS III, borgerens vurdering af betydning](CodeSystem-fs3-citizen-importance-scores.md)
* [FS III, borgerens vurdering af udførelse](CodeSystem-fs3-citizen-performance-scores.md)
* [FS III, Samfundsliv](CodeSystem-fs3-group-communitylife.md)
* [FS III, Mentale funktioner](CodeSystem-fs3-group-mentalfunctions.md)
* [FS III, Mobilitet](CodeSystem-fs3-group-mobility.md)
* [FS III, Praktiske opgaver](CodeSystem-fs3-group-practicaltasks.md)
* [FS III, Egenomsorg](CodeSystem-fs3-group-selfcare.md)
* [FS III, Kommunikation](CodeSystem-fs3-health-communication.md)
* [FS III, Udskillelse af affaldsstoffer](CodeSystem-fs3-health-excretion-of-waste-materials.md)
* [FS III, Funktionsniveau](CodeSystem-fs3-health-function-level.md)
* [FS III, Viden og udvikling](CodeSystem-fs3-health-knowledge-and-development.md)
* [FS III, Bevægeapparat](CodeSystem-fs3-health-musculoskeletal.md)
* [FS III, Ernæring](CodeSystem-fs3-health-nutrition.md)
* [FS III, Smerter og sanseindtryk](CodeSystem-fs3-health-pain-and-sensory-impressions.md)
* [FS III, Psykosociale forhold](CodeSystem-fs3-health-psychosocial-conditions.md)
* [FS III, Respiration og cirkulation](CodeSystem-fs3-health-respiration-and-circulation.md)
* [FS III, Seksualitet](CodeSystem-fs3-health-sexuality.md)
* [FS III, Hud og slimhinder](CodeSystem-fs3-health-skin-and-mucous-membranes.md)
* [FS III, Søvn og hvile](CodeSystem-fs3-health-sleep-and-rest.md)
* [FS III, niveauer](CodeSystem-fs3-scores.md)
* [Goal Description](CodeSystem-ehealth-goal-description.md)
* [Jurisdiction](CodeSystem-ehealth-jurisdiction.md)
* [Library Type](CodeSystem-ehealth-library-type.md)
* [Material Category](CodeSystem-ehealth-material-category.md)
* [Material Communication Category](CodeSystem-ehealth-material-communication-category.md)
* [Sharing Approval Policies](CodeSystem-ehealth-measurement-sharing-approval-policies.md)
* [Measurement Sharing Policies](CodeSystem-ehealth-measurement-sharing-policies.md)
* [Media usage mode](CodeSystem-ehealth-media-usage-mode.md)
* [Message Category](CodeSystem-ehealth-message-category.md)
* [Message Medium](CodeSystem-ehealth-message-medium.md)
* [Message ReasonCode](CodeSystem-ehealth-message-reasonCode.md)
* [Modifier Role](CodeSystem-ehealth-modifier-role.md)
* [Observation Method](CodeSystem-ehealth-observation-method.md)
* [OIO-BPP Role](CodeSystem-ehealth-oio-bpp-roles.md)
* [OIO Organization Type](CodeSystem-ehealth-oio-organization-type.md)
* [Organization Relation Type](CodeSystem-ehealth-organization-relation-type.md)
* [Organization Source](CodeSystem-ehealth-organization-source.md)
* [Organization Synchronization Status](CodeSystem-ehealth-organization-synchronization-status.md)
* [Overview usage mode](CodeSystem-ehealth-overviewUsageMode.md)
* [Participant Function](CodeSystem-participant-function.md)
* [Integer percentage codes](CodeSystem-percentage-codes.md)
* [PlanDefinition Recommendation](CodeSystem-ehealth-plandefinition-recommendation.md)
* [Priority](CodeSystem-ehealth-priority.md)
* [eHealth Program](CodeSystem-ehealth-program.md)
* [eHealth Property](CodeSystem-ehealth-property.md)
* [Quality Types](CodeSystem-ehealth-quality-types.md)
* [Questionnaire Elements](CodeSystem-ehealth-questionnaire-elements.md)
* [Questionnaire Item Significance Indicator](CodeSystem-ehealth-questionnaire-item-significance-indicator.md)
* [Questionnaire Recommendation](CodeSystem-ehealth-questionnaire-recommendation.md)
* [Questionnaire Types](CodeSystem-ehealth-questionnaire-types.md)
* [Reference Range Type](CodeSystem-ehealth-reference-range-type.md)
* [Resolved Timing Type](CodeSystem-resolved-timing-type.md)
* [Restriction Category](CodeSystem-ehealth-restriction-category.md)
* [Situation Quality](CodeSystem-ehealth-situation-quality.md)
* [SOR Organization Specialty](CodeSystem-ehealth-sor-organization-specialty.md)
* [SOR Organization Type](CodeSystem-ehealth-sor-organization-type.md)
* [Action Selection Behavior Supplement](CodeSystem-ehealth.sundhed.dk-action-selection-behavior-supplement.md)
* [LOINC Code System Supplement](CodeSystem-ehealth.sundhed.dk-loinc.org-supplement.md)
* [SNOMED CT Code System Supplement](CodeSystem-ehealth.sundhed.dk-snomed.info-sct-supplement.md)
* [Ehealth System](CodeSystem-ehealth-system.md)
* [Task Category](CodeSystem-ehealth-task-category.md)
* [Task Handover Roles](CodeSystem-ehealth-task-handover-roles.md)
* [Thumbnail Size Category](CodeSystem-ehealth-thumbnail-size.md)
* [Thumbnail status](CodeSystem-ehealth-thumbnail-status.md)
* [Topic Type](CodeSystem-ehealth-topic-type.md)
* [Trigger Enablement Code](CodeSystem-ehealth-trigger-enablement-code.md)
* [eHealth Unit Codes](CodeSystem-ehealth-unit-code.md)
* [Usage Quality](CodeSystem-ehealth-usage-quality.md)
* [View types](CodeSystem-ehealth-view-type.md)
* [Address Type](CodeSystem-hl7.org-fhir-address-type.md)
* [Address Use](CodeSystem-hl7.org-fhir-address-use.md)
* [Care Team Status](CodeSystem-hl7.org-fhir-care-team-status.md)
* [Consent State Codes](CodeSystem-hl7.org-fhir-consent-state-codes.md)
* [Days Of Week](CodeSystem-hl7.org-fhir-days-of-week.md)
* [Episode Of Care Status](CodeSystem-hl7.org-fhir-episode-of-care-status.md)
* [Questionnaire Item Type](CodeSystem-item-type.md)
* [Publication Status](CodeSystem-hl7.org-fhir-publication-status.md)
* [Request Status](CodeSystem-hl7.org-fhir-request-status.md)
* [Resource Type](CodeSystem-hl7.org-fhir-resource-types.md)
* [v3 Code System TimingEvent](CodeSystem-v3-TimingEvent.md)
* [Regional subdivision codes](CodeSystem-iso-reg-subdiv-codes.md)
* [FSIII](CodeSystem-kl.dk-fhir-common-caresocial-CodeSystem-FSIII.md)
* [Danish SNOMED CT Extension](CodeSystem-snomed-20150731.md)
* [Danish SNOMED CT Extension](CodeSystem-snomed-20180331.md)
* [Danish SNOMED CT Extension](CodeSystem-snomed-20180930.md)
* [DataAbsentReason](CodeSystem-data-absent-reason.md)
* [HL7 Terminology Maintenance Infrastructure Vocabulary](CodeSystem-hl7TermMaintInfra.md)
* [Common Codes from BCP-47](CodeSystem-urn-ietf-bcp-47.md)
* [NPU DK](CodeSystem-1.2.208.176.2.1--20190829.md)
* [Sundhedsvæsenets klassifikationssystem (SKS)](CodeSystem-urn-oid-1.2.208.176.2.4.md)
* [Questionnaires used in the Danish Patient Reported Outcome (PRO)](CodeSystem-urn-oid-1.2.208.176.7.3.1.md)
* [MedCom Message Codes](CodeSystem-urn-oid-1.2.208.184.100.1.md)
* [DK IHE Format Code CodeSystem](CodeSystem-dk-ihe-formatcode-cs.md)
* [MedCom Measurement CodeSystem](CodeSystem-urn-oid-1.2.208.184.100.8.md)
* [DK IHE ClassCode CS](CodeSystem-urn-oid-1.2.208.184.100.9.md)

## ConceptMaps

* [Activitydefinition-code to do missing measurement](ConceptMap-activitydefinition-code-to-do-missing-measurement.md)
* [Activitydefinition-code to do reminder](ConceptMap-activitydefinition-code-to-do-reminder.md)
* [Activitydefinition-code to measurement resource type](ConceptMap-activitydefinition-code-to-measurement-resource-type.md)
* [ActivityDefinition code to Observation code](ConceptMap-activitydefinition-code-to-observation-code.md)
* [Activitydefinition-code-to-perform-sharing](ConceptMap-activitydefinition-code-to-perform-sharing.md)
* [Observation code to UCUM mapping](ConceptMap-conceptmap-obs-code-to-ucum.md)
* [conceptmap-obs-code-to-value-type](ConceptMap-conceptmap-obs-code-to-value-type.md)
* [UCUM code to PrintSymbol mapping](ConceptMap-conceptmap-ucum-to-printsymbol.md)
* [OIO BPP roles to eHealth CareTeam participant role mapping](ConceptMap-oio-bpp-roles-to-careteam-participant-roles.md)

## NamingSystems

* [Danish civil registration system - CPR](NamingSystem-cpr.md)
* [Ydernummer](NamingSystem-ydernummer.md)
* [Sundhedsvæsenets Organisationsregister (SOR)](NamingSystem-sor.md)
* [eHealth Environment](NamingSystem-ehealth-environment.md)
* [eHealthIdentifier](NamingSystem-ehealth-identifier.md)
* [eHealthQuestionIdentifier](NamingSystem-ehealth-question-identifier.md)
* [eHealth Device Identifier](NamingSystem-ehealth-device-identifier.md)

